--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background: #f5f5f5;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 20px;
     max-width: 800px;
     font-family: Arial, sans-serif;
     text-align: center;
@@ -12,32 +12,53 @@ ul {
     list-style: none;
     padding: 0;
     text-align: center;
-    margin: 0 -15px 100px 0;
+    margin: 0 0 60px 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 ul li {
     display: inline-block;
     vertical-align: top;
-    margin-right: 15px;
-    margin-bottom: 15px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+ul li:hover {
+    box-shadow: 0 0 0 2px white, 0 0 0 3px #ccc;
 }
 
 h1 {
     text-transform: uppercase;
-    font-size: 72px;
+    font-size: 70px;
     text-align: center;
     padding-bottom: 30px;
     margin-bottom: 60px;
     border-bottom: 1px solid #ccc;
+    text-shadow: 0 1px 0 white;
+    box-shadow: 0 1px 0 0 white;
+    position: relative;
 }
 
-.link-back {
+h1:before {
+    content: '250';
+    display: none;
+    padding-right: 20px;
+}
+
+h1:hover:before {
     display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    color:#444;
 }
 
-.link-back:hover {
-    text-decoration: underline;
+.code {
+    margin: 0 auto 100px;
+    display: block;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background: white;
+    color: #444;
+    width: 300px;
+    height: 14px;
 }
