fixed scss syntax error

--- a/scss/_flags.scss
+++ b/scss/_flags.scss
@@ -257,7 +257,7 @@ $flags-path: '../images/flags.png' !default;
 
   &.catalonia,
   &.ctl,
-  &.ct, {
+  &.ct {
     background-position: -64px -22px
   }
 
